[gd_scene load_steps=76 format=2]

[ext_resource path="res://Player/States/Jumping.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Player/States/Idle.gd" type="Script" id=4]
[ext_resource path="res://Player/States/Running.gd" type="Script" id=5]
[ext_resource path="res://Player/States/InAir.gd" type="Script" id=6]
[ext_resource path="res://Shadow3.png" type="Texture" id=7]
[ext_resource path="res://Player/8 directional idle sheet.png" type="Texture" id=8]
[ext_resource path="res://Player/States/Attacking.gd" type="Script" id=14]
[ext_resource path="res://Player/States/Interacting.gd" type="Script" id=15]
[ext_resource path="res://Player/States/Hurt.gd" type="Script" id=16]
[ext_resource path="res://newSpriteShader.shader" type="Shader" id=18]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=19]

[sub_resource type="CapsuleShape" id=66]
radius = 1.5

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_texture = ExtResource( 7 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 18 )
shader_param/Is_White = false
shader_param/Color_Override = false
shader_param/Color = Color( 1, 1, 0, 1 )
shader_param/Horizontal_Dither = false
shader_param/Vertical_Dither = false
shader_param/Sprites = ExtResource( 8 )

[sub_resource type="Animation" id=7]
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 37 ]
}

[sub_resource type="Animation" id=8]
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=9]
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=10]
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle_backleft"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=12]
resource_name = "idle_backright"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=13]
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=14]
resource_name = "idle_frontleft"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=15]
resource_name = "idle_frontright"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=16]
resource_name = "idle_left"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=17]
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=18]
length = 0.25
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Jumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=19]
resource_name = "jump_backleft"
length = 0.25
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Jumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.051 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "jump_backright"
length = 0.25
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Jumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.051 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=21]
length = 0.25
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Jumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.051 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=22]
resource_name = "jump_frontleft"
length = 0.25
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Jumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.051 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=23]
resource_name = "jump_frontright"
length = 0.25
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Jumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.051 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=24]
resource_name = "jump_left"
length = 0.25
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Jumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.051 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=25]
length = 0.25
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Jumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.051 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=26]
length = 0.533333
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=27]
resource_name = "run_backleft"
length = 0.533333
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=28]
resource_name = "run_backright"
length = 0.533333
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=29]
length = 0.533333
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=30]
resource_name = "run_frontleft"
length = 0.533333
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=31]
resource_name = "run_frontright"
length = 0.533333
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=32]
resource_name = "run_left"
length = 0.533333
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=33]
length = 0.533333
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "idle_back"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "idle_front"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "idle_backright"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "idle_backleft"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "idle_frontleft"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "idle_frontright"

[sub_resource type="AnimationNodeBlendSpace2D" id=42]
auto_triangles = false
blend_point_0/node = SubResource( 34 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 35 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 36 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 37 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 38 )
blend_point_4/pos = Vector2( 0.7, 0.7 )
blend_point_5/node = SubResource( 39 )
blend_point_5/pos = Vector2( -0.7, 0.7 )
blend_point_6/node = SubResource( 40 )
blend_point_6/pos = Vector2( -0.7, -0.7 )
blend_point_7/node = SubResource( 41 )
blend_point_7/pos = Vector2( 0.7, -0.7 )
triangles = PoolIntArray( 0, 2, 3, 1, 2, 3, 1, 2, 4, 0, 2, 5, 0, 3, 6, 1, 3, 7 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "jump_front"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "jump_frontright"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "jump_right"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "jump_backright"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "jump_back"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "jump_backleft"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "jump_left"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "jump_frontleft"

[sub_resource type="AnimationNodeBlendSpace2D" id=51]
blend_point_0/node = SubResource( 43 )
blend_point_0/pos = Vector2( 0, -1 )
blend_point_1/node = SubResource( 44 )
blend_point_1/pos = Vector2( 0.7, -0.7 )
blend_point_2/node = SubResource( 45 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 46 )
blend_point_3/pos = Vector2( 0.7, 0.7 )
blend_point_4/node = SubResource( 47 )
blend_point_4/pos = Vector2( 0, 1 )
blend_point_5/node = SubResource( 48 )
blend_point_5/pos = Vector2( -0.7, 0.7 )
blend_point_6/node = SubResource( 49 )
blend_point_6/pos = Vector2( -1, 0 )
blend_point_7/node = SubResource( 50 )
blend_point_7/pos = Vector2( -0.7, -0.7 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "run_back"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "run_left"

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "run_front"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "run_backright"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "run_frontright"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "run_frontleft"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "run_backleft"

[sub_resource type="AnimationNodeBlendSpace2D" id=60]
blend_point_0/node = SubResource( 52 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 53 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 54 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 55 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 56 )
blend_point_4/pos = Vector2( 0.7, 0.7 )
blend_point_5/node = SubResource( 57 )
blend_point_5/pos = Vector2( 0.7, -0.7 )
blend_point_6/node = SubResource( 58 )
blend_point_6/pos = Vector2( -0.7, -0.7 )
blend_point_7/node = SubResource( 59 )
blend_point_7/pos = Vector2( -0.7, 0.7 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=61]
states/Idle/node = SubResource( 42 )
states/Idle/position = Vector2( 280.667, 172.333 )
states/Jumping/node = SubResource( 51 )
states/Jumping/position = Vector2( 382, 262 )
states/Running/node = SubResource( 60 )
states/Running/position = Vector2( 468, 172.333 )
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=62]

[sub_resource type="CapsuleShape" id=63]
height = 1.3

[sub_resource type="CubeMesh" id=64]

[sub_resource type="SpatialMaterial" id=65]
flags_unshaded = true

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="InAir" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Attacking" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Interacting" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.912, 0 )
shape = SubResource( 66 )

[node name="ShadowRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.743551, 0 )
enabled = true
cast_to = Vector3( 0, -30, 0 )

[node name="Shadow" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
material_override = SubResource( 2 )
pixel_size = 0.075
texture = ExtResource( 7 )

[node name="InteractRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )
collision_mask = 3

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 0.305666, 0, 0, 0, 0.553299, 0, 0, 0, 1, 0, 0.6, 0 )
material_override = SubResource( 3 )
cast_shadow = 0
offset = Vector2( 0.5, 12 )
pixel_size = 0.1
texture = ExtResource( 8 )
hframes = 8
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/attack_back = SubResource( 7 )
anims/attack_front = SubResource( 8 )
anims/attack_side = SubResource( 9 )
anims/idle_back = SubResource( 10 )
anims/idle_backleft = SubResource( 11 )
anims/idle_backright = SubResource( 12 )
anims/idle_front = SubResource( 13 )
anims/idle_frontleft = SubResource( 14 )
anims/idle_frontright = SubResource( 15 )
anims/idle_left = SubResource( 16 )
anims/idle_right = SubResource( 17 )
anims/jump_back = SubResource( 18 )
anims/jump_backleft = SubResource( 19 )
anims/jump_backright = SubResource( 20 )
anims/jump_front = SubResource( 21 )
anims/jump_frontleft = SubResource( 22 )
anims/jump_frontright = SubResource( 23 )
anims/jump_left = SubResource( 24 )
anims/jump_right = SubResource( 25 )
anims/run_back = SubResource( 26 )
anims/run_backleft = SubResource( 27 )
anims/run_backright = SubResource( 28 )
anims/run_front = SubResource( 29 )
anims/run_frontleft = SubResource( 30 )
anims/run_frontright = SubResource( 31 )
anims/run_left = SubResource( 32 )
anims/run_right = SubResource( 33 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 61 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 62 )
parameters/Idle/blend_position = Vector2( 0, -1 )
parameters/Jumping/blend_position = Vector2( 0, -1 )
parameters/Running/blend_position = Vector2( 0, -1 )

[node name="Hurtbox" parent="." instance=ExtResource( 19 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4587, 0 )
visible = false

[node name="CollisionShape" parent="Hurtbox" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.253059, 0 )
shape = SubResource( 63 )

[node name="Anchor" type="Spatial" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="Anchor"]
transform = Transform( 0.15168, 0, 0, 0, 0.15168, 0, 0, 0, 1.36888, 0, 1.39064, 1.38695 )
mesh = SubResource( 64 )
material/0 = SubResource( 65 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
